style: :lipstick: Fix z-index of Header

--- a/src/styles/components/header/_header.scss
+++ b/src/styles/components/header/_header.scss
@@ -5,7 +5,7 @@
 
     &__menu {
         position: fixed;
-        z-index: 1;
+        z-index: 2;
         bottom: 0;
 
         width: 100%;
